--- a/api/public/css/grouping.css
+++ b/api/public/css/grouping.css
@@ -1,172 +1,3 @@
-/* html {
-    background-color: #97d5da;
-}
-.container {
-    display: flex;
-}
-ul {
-    list-style-type: none;
-}
-
-.group_list {
-    width: 40%;
-    min-width: 300px;
-    max-width: 400px;
-
-    color: #333;
-}
-.accordion {
-    background-color: #333;
-}
-
-* {
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
-}
-
-h1 {
-    font-family: 'Pacifico', cursive;
-    font-weight: 400;
-    font-size: 2.5em;
-}
-
-.inner {
-    list-style: none;
-    padding: 0;
-    padding-left: 1em;
-    overflow: hidden;
-    display: none;
-}
-
-.toggle {
-    margin: 0.5em 0;
-    width: 100%;
-    display: block;
-    background: rgba(0, 0, 0, 0.78);
-    color: #fefefe;
-    padding: 0.75em;
-    border-radius: 0.15em;
-    
-}
-
-.bracketBlock {
-    width: 50%;
-    margin: 0 100px;
-}
-
-a.toggle:hover {
-    background: rgba(0, 0, 0, 0.9);
-}
-
-.competition {
-    display: grid;
-}
-button {
-    height: 26px;
-}
-
-.finishIcon {
-    width: 15px;
-    margin-right: 10px;
-} */
-/* fieldset {
-    border: 1px groove #ddd !important;
-    padding: 0 1.4em 3em 1.4em !important;
-    margin: 0 0 1.5em 0 !important;
-    -webkit-box-shadow: 0px 0px 0px 0px #000;
-    box-shadow: 0px 0px 0px 0px #000;
-}
-
-legend {
-    font-size: 1.2em !important;
-    font-weight: bold !important;
-    text-align: left !important;
-    width: auto;
-    padding: 0 10px;
-    border-bottom: none;
-}
-
-html {
-    background-color: #97d5da;
-}
-
-.well {
-    text-align: center;
-    min-height: 20px;
-    padding: 19px;
-    margin-bottom: 20px;
-    background-color: #f5f5f5;
-    border: 1px solid #e3e3e3;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-}
-
-.form-group {
-    display: flex;
-    margin-bottom: 15px;
-    margin-top: 15px;
-}
-
-.form-control {
-    width: 600px;
-    height: 15px;
-    margin-left: 10px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    -webkit-transition: border-color ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
-    -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-}
-
-.button {
-    position: absolute;
-    right: 70px;
-    border-radius: 4px;
-    background-color: white;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    border: none;
-    color: #2a8b83;
-    text-align: center;
-    padding: 10px 70px;
-    transition: all 0.5s;
-    cursor: pointer;
-}
-
-.button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-}
-
-.button span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-}
-
-.button:hover span {
-    padding-right: 25px;
-}
-
-.button:hover span:after {
-    opacity: 1;
-    right: 0;
-} */
-
 body {
     width: 100%;
     margin: 0;
@@ -186,7 +17,6 @@ body {
 .logo {
     padding-left: 10%;
     padding-top: 0.3%;
-    /* padding-bottom: 0.25%; */
 }
 
 .content-wapper {
@@ -196,36 +26,65 @@ body {
     margin: auto;
     height: 85vh;
     padding-top: 3%;
-    /* padding-bottom: 15%; */
-}
-.beaver-wapper {
-    margin-top: 10%;
-    width: 30%;
-}
-.beaver {
-    display: inline;
-    float: right;
-    width: 70%;
-    margin-right: 10%;
-    margin-block-start: auto;
-}
-.setting-wapper {
-    width: 70%;
-    /* margin-left: 20%;
-    margin-right: 30%; */
 }
 
-/* .robot {
-    display: inline;
-    float: left;
-    width: 70%;
-    margin-left: 10%;
-    margin-block-start: auto;
-}
-.robot-wapper {
-    width: 30%;
+/* .beaver {
+    position: absolute;
+    left: 40px;
 } */
+.setting-wapper {
+    margin-left: 20%;
+    margin-right: 20%;
+    width: 70%;
+}
+.buttonWapper {
+    display: flex;
+}
 
+.editButton {
+    display: flex;
+    border: 0;
+    outline: none;
+    border-radius: 0;
+    text-transform: uppercase;
+    text-align: center;
+    background: #d1d1d1;
+    color: black;
+    transition: all 0.5s ease;
+    border-radius: 10px;
+    -webkit-appearance: none;
+    padding: 10px;
+    height: fit-content;
+    margin-right: 10px;
+}
+.saveButton {
+    display: flex;
+    border: 0;
+    outline: none;
+    border-radius: 0;
+    text-transform: uppercase;
+    text-align: center;
+    background: rgb(53, 53, 233);
+    color: #ffffff;
+    transition: all 0.5s ease;
+    border-radius: 10px;
+    -webkit-appearance: none;
+    padding: 10px;
+    height: fit-content;
+}
+/* .editButton:hover,
+.saveButton:hover,
+.editButton:focus,
+.saveButton:focus {
+    background: blue;
+} */
+.textWapper {
+    display: flex;
+    text-align: center;
+}
+.text {
+    padding-left: 10px;
+}
 .title {
     width: 100%;
 }
@@ -292,7 +151,6 @@ h1 {
     text-align: center;
     color: black;
     font-weight: 300;
-    /* margin: 0 0 ; */
     font-weight: 600;
     letter-spacing: 0.1em;
 }
@@ -372,28 +230,22 @@ textarea {
     letter-spacing: 0.1em;
     display: inline-block;
 }
-.button {
+
+.roundButtons {
+    text-align: center;
+    display: inline-flex;
+}
+.roundButton {
+    width: 100px;
+    margin-right: 40px;
     border: 0;
     outline: none;
     border-radius: 0;
-    padding: 15px 0;
-    font-size: 2rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    background: #70ad46;
-    color: #ffffff;
+    background: #f1e26c;
+    color: black;
     transition: all 0.5s ease;
     border-radius: 10px;
     -webkit-appearance: none;
-}
-.button:hover,
-.button:focus {
-    background: #5c8f3a;
-}
-
-.button-block {
-    display: block;
-    width: 100%;
-    margin-top: 2em;
+    padding: 5px;
+    height: fit-content;
 }
