--- a/api/public/css/grouping.css
+++ b/api/public/css/grouping.css
@@ -7,6 +7,7 @@ body {
 .header-wapper {
     display: block;
     width: 100%;
+    height: 10vh;
     box-shadow: 0 4px 10px 4px rgb(19 35 47 / 30%);
     border-bottom-color: rgb(219, 219, 219);
     border-bottom-style: solid;
@@ -18,6 +19,31 @@ body {
     padding-left: 10%;
     padding-top: 0.3%;
 }
+.logoWapper {
+    margin-left: 10%;
+    display: flex;
+}
+.info-wapper {
+    display: flex;
+    margin-left: auto;
+    margin-right: 50px;
+}
+.activityName {
+    margin: auto;
+}
+.logOutButton {
+    border: 0;
+    color: #333;
+    background: #d1d1d1;
+    font-size: 12px;
+    margin: auto;
+    margin-left: 10px;
+    border-radius: 6px;
+    padding: 10px 15px;
+}
+.logOutButton:hover {
+    background: #a1a1a1;
+}
 
 .content-wapper {
     background-image: url('https://compthinking.csie.ntnu.edu.tw/wp-content/uploads/2020/12/Bebras-2_bg.png');
@@ -25,7 +51,8 @@ body {
     background-position: center top;
     margin: auto;
     height: 85vh;
-    padding-top: 3%;
+    justify-content: center;
+    align-items: center;
 }
 
 /* .beaver {
@@ -95,11 +122,12 @@ body {
     border-top-color: rgb(219, 219, 219);
     border-top-style: solid;
     border-top-width: 1.5px;
+    height: 5vh;
 }
 .footer {
     width: 100%;
     text-align: center;
-    margin-top: 15px;
+    margin-top: 1vh;
 }
 .copyright {
     font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, 'Noto Sans',
@@ -150,7 +178,6 @@ a:hover {
 h1 {
     text-align: center;
     color: black;
-    font-weight: 300;
     font-weight: 600;
     letter-spacing: 0.1em;
 }
@@ -237,7 +264,8 @@ textarea {
 }
 .roundButton {
     width: 100px;
-    margin-right: 40px;
+    margin-right: 8vh;
+    margin-top: 5%;
     border: 0;
     outline: none;
     border-radius: 0;
