--- a/api/public/css/main.css
+++ b/api/public/css/main.css
@@ -5,13 +5,18 @@ body {
 }
 
 .header-wapper {
-    display: block;
+    display: flex;
     width: 100%;
+    height: 10vh;
     box-shadow: 0 4px 10px 4px rgb(19 35 47 / 30%);
     border-bottom-color: rgb(219, 219, 219);
     border-bottom-style: solid;
     border-bottom-width: 1.5px;
     background-color: white;
+}
+.logoWapper {
+    margin-left: 10%;
+    display: flex;
 }
 
 .logo {
@@ -26,8 +31,8 @@ body {
     background-position: center top;
     margin: auto;
     height: 85vh;
-    padding-top: 8%;
-    /* padding-bottom: 15%; */
+    justify-content: center;
+    align-items: center;
 }
 .beaver-wapper {
     width: 30%;
@@ -63,11 +68,12 @@ body {
     border-top-color: rgb(219, 219, 219);
     border-top-style: solid;
     border-top-width: 1.5px;
+    height: 5vh;
 }
 .footer {
     width: 100%;
     text-align: center;
-    margin-top: 15px;
+    margin-top: 1vh;
 }
 .copyright {
     font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, 'Noto Sans',
@@ -87,6 +93,7 @@ body {
 
 html {
     overflow-y: scroll;
+    font-size: 16px;
 }
 
 a {
@@ -116,10 +123,9 @@ a:hover {
 }
 
 h1 {
+    font-size: 2rem;
     text-align: center;
     color: black;
-    font-weight: 300;
-    margin: 0 0 40px;
     font-weight: 600;
     letter-spacing: 0.1em;
 }
@@ -181,7 +187,14 @@ textarea {
 
 .field-wrap {
     position: relative;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
+}
+p {
+    color: #f5550d;
+    font-size: 18px;
+    margin: 5px;
+    padding-left: 5px;
+    padding-right: 0;
 }
 
 .button {
