--- a/api/public/css/set.css
+++ b/api/public/css/set.css
@@ -7,11 +7,17 @@ body {
 .header-wapper {
     display: block;
     width: 100%;
+    height: 10vh;
     box-shadow: 0 4px 10px 4px rgb(19 35 47 / 30%);
     border-bottom-color: rgb(219, 219, 219);
     border-bottom-style: solid;
     border-bottom-width: 1.5px;
     background-color: white;
+}
+
+.logoWapper {
+    margin-left: 10%;
+    display: flex;
 }
 
 .logo {
@@ -34,21 +40,18 @@ body {
     margin-right: 5%;
 }
 
-.title {
-    width: 100%;
-}
-
 .footer-wapper {
     width: 100%;
     box-shadow: 0 -5px 6px rgb(19 35 47 / 30%);
     border-top-color: rgb(219, 219, 219);
     border-top-style: solid;
     border-top-width: 1.5px;
+    height: 5vh;
 }
 .footer {
     width: 100%;
     text-align: center;
-    margin-top: 15px;
+    margin-top: 1vh;
 }
 .copyright {
     font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, 'Noto Sans',
@@ -83,7 +86,7 @@ a:hover {
     background: #f2f2f2;
     padding: 40px;
     width: 100%;
-    height: 75%;
+    min-height: 80%;
     border-radius: 30px;
     box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
     margin-left: auto;
@@ -95,11 +98,18 @@ a:hover {
 .tab-content > div:last-child {
     display: none;
 }
-.subtitle {
-    font-size: 45px;
+
+.title {
+    font-size: 2rem;
     color: black;
-    font-weight: 300;
-    margin: 0 0 30px;
+    font-weight: 600;
+    letter-spacing: 0.1em;
+}
+.subtitle {
+    line-height: 10vh;
+    text-align: center;
+    font-size: 1.5rem;
+    color: black;
     font-weight: 600;
     letter-spacing: 0.1em;
 }
@@ -107,9 +117,9 @@ a:hover {
 h1 {
     text-align: center;
     color: black;
-    font-weight: 300;
     font-weight: 600;
     letter-spacing: 0.1em;
+    font-size: 30px;
 }
 p {
     color: #f5550d;
@@ -150,7 +160,7 @@ label.highlight {
 input,
 textarea,
 select {
-    font-size: 22px;
+    font-size: 1rem;
     display: block;
     width: 100%;
     height: 100%;
@@ -209,7 +219,7 @@ textarea {
     outline: none;
     border-radius: 0;
     padding: 15px 0;
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 0.1em;
@@ -234,7 +244,7 @@ textarea {
     outline: none;
     border-radius: 0;
     padding: 15px 0;
-    font-size: 2em;
+    font-size: 1em;
     /* font-weight: 600; */
     text-transform: uppercase;
     letter-spacing: 0.1em;
@@ -253,7 +263,7 @@ textarea {
     outline: none;
     border-radius: 0;
     padding: 15px 0;
-    font-size: 1.5rem;
+    font-size: 1rem;
     /* font-weight: 600; */
     text-transform: uppercase;
     letter-spacing: 0.1em;
