--- a/api/public/css/grouping.css
+++ b/api/public/css/grouping.css
@@ -1,8 +1,14 @@
+html,
 body {
+    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
 }
+/* html,
+body {
+    margin: 0;
+} */
 
 .header-wapper {
     display: block;
@@ -46,11 +52,11 @@ body {
 }
 
 .content-wapper {
-    background-image: url('../assets/image/Bebras-2_bg.png');
+    background-image: url(../assets/image/Bebras-2_bg.png);
     display: flex;
     background-position: center top;
     margin: auto;
-    height: 85vh;
+    min-height: calc(100% - 15vh);
     justify-content: center;
     align-items: center;
 }
@@ -60,6 +66,8 @@ body {
     left: 40px;
 } */
 .setting-wapper {
+    margin-bottom: 5%;
+    margin-top: 5%;
     margin-left: 20%;
     margin-right: 20%;
     width: 70%;
