--- a/api/public/css/grouping.css
+++ b/api/public/css/grouping.css
@@ -13,7 +13,6 @@ body {
 .header-wapper {
     display: block;
     width: 100%;
-    height: 10vh;
     box-shadow: 0 4px 10px 4px rgb(19 35 47 / 30%);
     border-bottom-color: rgb(219, 219, 219);
     border-bottom-style: solid;
@@ -56,7 +55,7 @@ body {
     display: flex;
     background-position: center top;
     margin: auto;
-    min-height: calc(100% - 15vh);
+    min-height: calc(100vh - 150px);
     justify-content: center;
     align-items: center;
 }
@@ -130,7 +129,7 @@ body {
     border-top-color: rgb(219, 219, 219);
     border-top-style: solid;
     border-top-width: 1.5px;
-    height: 5vh;
+    height: 50px;
 }
 .footer {
     width: 100%;
