--- a/api/public/css/main.css
+++ b/api/public/css/main.css
@@ -7,7 +7,7 @@ body {
 .header-wapper {
     display: flex;
     width: 100%;
-    height: 10vh;
+    /* height: 10vh; */
     box-shadow: 0 4px 10px 4px rgb(19 35 47 / 30%);
     border-bottom-color: rgb(219, 219, 219);
     border-bottom-style: solid;
@@ -30,7 +30,7 @@ body {
     display: flex;
     background-position: center top;
     margin: auto;
-    height: 85vh;
+    min-height: calc(100vh - 150px);
     justify-content: center;
     align-items: center;
 }
@@ -68,7 +68,7 @@ body {
     border-top-color: rgb(219, 219, 219);
     border-top-style: solid;
     border-top-width: 1.5px;
-    height: 5vh;
+    height: 50px;
 }
 .footer {
     width: 100%;
