--- a/api/public/css/set.css
+++ b/api/public/css/set.css
@@ -1,5 +1,6 @@
 body {
     width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -7,7 +8,7 @@ body {
 .header-wapper {
     display: block;
     width: 100%;
-    height: 10vh;
+    /* height: 10vh; */
     box-shadow: 0 4px 10px 4px rgb(19 35 47 / 30%);
     border-bottom-color: rgb(219, 219, 219);
     border-bottom-style: solid;
@@ -31,7 +32,7 @@ body {
     display: flex;
     background-position: center top;
     margin: auto;
-    height: 85vh;
+    min-height: calc(100vh - 150px);
     padding-top: 3%;
 }
 .setting-wapper {
@@ -46,7 +47,7 @@ body {
     border-top-color: rgb(219, 219, 219);
     border-top-style: solid;
     border-top-width: 1.5px;
-    height: 5vh;
+    height: 50px;
 }
 .footer {
     width: 100%;
